yellowgreen updated css for font color

--- a/css/experience.css
+++ b/css/experience.css
@@ -34,7 +34,7 @@
     line-height: 1.5;
     margin-bottom: 10px;
     list-style: none;
-    color: #FFFF00;
+    color: yellowgreen;
   }
   
   strong {
